Fixing spacing on nav links

--- a/_sass/components/_navigation.scss
+++ b/_sass/components/_navigation.scss
@@ -57,8 +57,8 @@
         align-items: center;
         font-size: 1.25rem;
         font-weight: 500;
-        padding: 1rem 0 1rem 1.5rem;
-        margin: 0;
+        padding: 1rem 0.5rem 1rem 0.5rem;
+        margin: 0 0 0 0.5rem;
         color: $nav-font-color-alt;
         line-height: 1.2;
         text-align: center;
